新增设置页面

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/styles": "^4.9.13",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "solidoc-base-component-lib": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
