--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "iffe-setting",
+  "name": "@tangzijun/iffe-setting",
   "version": "0.1.0",
   "license": "MIT",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "homepage": "https://tangzijun.github.io/iffe-setting/",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/@tangzijun"
   },
+  "files": [
+    "build"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^9.3.2",
