--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tangzijun/iffe-setting",
-  "version": "0.1.0",
+  "name": "@tangzijun/iffe-setting1",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "build/index.js",
   "homepage": "https://tangzijun.github.io/iffe-setting/",
