--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "@tangzijun/iffe-setting",
-  "version": "0.1.3",
+  "version": "0.1.8",
   "license": "MIT",
   "main": "build/index.js",
-  "homepage": "https://tangzijun.github.io/iffe-setting/",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@tangzijun"
-  },
+  "homepage": "https://tangzijun.github.io/iffe-setting1/",
   "files": [
     "build"
   ],
+  "repository": "https://github.com/tangzijun/iffe-setting.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "is-hotkey": "^0.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
