--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tangzijun/iffe-setting",
+  "name": "@tangzijun/iffe-setting2",
   "version": "0.2.0",
   "license": "MIT",
   "main": "build/index.js",
