--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: test env
-        env:
+        with:
           ZIJUN_SECRET: ${{ secrets.zijun_pwd }}
         run: echo "$ZIJUN_SECRET"
 
