--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - name: test env
         with:
           ZIJUN_SECRET: ${{ secrets.zijun_pwd }}
-        run: echo 11
+        run: echo "你好 $ZIJUN_SECRET"
 
       - name: install dependencies
         run: yarn
