--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test env
-        run: echo "$HOME"
+        run: echo "你好 $GITHUB_ACTOR"
