--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: deploy-github-pages2
+name: deploy-github-pages
 on:
   push:
     branches:
@@ -7,5 +7,33 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: test env
-        run: echo "你好 $GITHUB_ACTOR"
+      - name: check user
+        run: echo "工作流启动成员：$GITHUB_ACTOR"
+
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: cache node modules
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: install dependencies
+        run: yarn
+
+      - name: build
+        run: yarn build
+
+      - name: deploy
+        uses: JamesIves/github-pages-deploy-action@master
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: build
