--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
 
       - name: publish
         # 发布先行版
-        run: npm version prerelease --preid=alpha && npm publish --tag next
+        # run: npm version prerelease --preid=alpha && npm publish --tag next
+        run: npm publish --tag next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
