--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,14 @@
 # https://github.com/semantic-release/semantic-release
 name: deploy-github-pages
 
-on:
-  repository_dispatch:
-    types: [run_tests]
 # on:
-#   push:
-#     branches:
-#       - master
+#   repository_dispatch:
+#   types: [run_tests]
+
+on:
+  push:
+    branches:
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -42,12 +43,17 @@ jobs:
       - name: build
         run: yarn build
 
-      - name: publish
-        # 发布先行版
-        # run: npm version prerelease --preid=alpha && npm publish --tag next
-        run: npm publish --tag next
+      # - name: publish
+      # 发布先行版
+      # run: npm version prerelease --preid=alpha && npm publish --tag next
+      # run: npm publish --tag next
+      # env:
+      #   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Release
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
 
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@master
