--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tangzijun/iffe-setting",
-  "version": "0.3.8-alpha.2",
+  "version": "0.0.0-development",
   "license": "MIT",
   "main": "build/index.js",
   "homepage": "https://tangzijun.github.io/iffe-setting/",
@@ -28,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commit": "npx git-cz",
+    "semantic-release": "semantic-release"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "semantic-release": "^17.0.7"
   }
 }
