--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "commit": "git-cz",
+    "commit": "git add . && git-cz",
     "semantic-release": "semantic-release"
   },
   "eslintConfig": {
