--- a/package.json
+++ b/package.json
@@ -49,18 +49,13 @@
   },
   "devDependencies": {
     "commitizen": "^4.1.2",
-    "cz-conventional-changelog": "3.2.0",
+    "cz-conventional-changelog": "^3.2.0",
     "husky": "^4.2.5",
     "semantic-release": "^17.0.7"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   }
 }
