--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cm": "git-cz",
+    "cmt": "git-cz",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
