--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    },
+    "cz-customizable": {
+      "config": ".cz-config"
     }
   }
 }
