特性(模块1): dksfkdsf
kdsfsdfdksf

--- a/package.json
+++ b/package.json
@@ -50,15 +50,13 @@
   "devDependencies": {
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.2.0",
+    "cz-customizable": "^6.2.0",
     "husky": "^4.2.5",
     "semantic-release": "^17.0.7"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "cz-customizable": {
-      "config": ".cz-config"
+      "path": "./node_modules/cz-customizable"
     }
   }
 }
