--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-customizable"
     },
     "cz-customizable": {
       "config": "./cz-config.js"
