--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@tangzijun/iffe-commitizen-changelog": "0.0.1",
     "commitizen": "^4.1.2",
     "conventional-changelog": "^3.1.21",
     "cz-conventional-changelog": "^3.2.0",
