--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "iffe-commit": "^1.1.1",
     "semantic-release": "^17.0.7"
   },
