feat: 修改发布配置

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,13 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": true,
+        "tarballDir": "build"
+      }
+    ],
     "@semantic-release/github",
     [
       "@semantic-release/changelog",
