--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "files": [
     "build"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/tangzijun/iffe-setting.git"
