--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,18 +19,18 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+      # - name: Get yarn cache directory path
+      #   id: yarn-cache-dir-path
+      #   run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: set cache node modules
-        uses: actions/cache@v1
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      # - name: set cache node modules
+      #   uses: actions/cache@v1
+      #   id: yarn-cache
+      #   with:
+      #     path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+      #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-yarn-
 
       # - name: set node env
       #   uses: actions/setup-node@v1
@@ -38,11 +38,11 @@ jobs:
       #     registry-url: "https://npm.pkg.github.com"
       #     scope: "@tangzijun"
 
-      - name: install dependencies
-        run: yarn --frozen-lockfile
+      # - name: install dependencies
+      #   run: yarn install --ignore-scripts
 
-      - name: build
-        run: yarn build
+      # - name: build
+      #   run: yarn build
 
       # - name: publish
       #   run: npm publish
@@ -58,8 +58,8 @@ jobs:
 
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
       # - name: deploy
       #   uses: JamesIves/github-pages-deploy-action@master
