--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-development",
   "license": "MIT",
   "main": "build/index.js",
-  "homepage": "https://tangzijun.github.io/",
+  "homepage": "https://tangzijun.github.io/iffe-setting",
   "files": [
     "build"
   ],
